refractor: updated with some extra information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AG site</title>
   </head>
   <body>
-    Hi This is Akhil
+    Hi This is Akhil I'm from jeypore i worked as a software engineer at
+    affixius i currently live in hyderabad
   </body>
 </html>
