refractor: used paragaraph tag in html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     Hi This is Akhil I'm from jeypore i worked as a software engineer at
-    affixius i currently live in hyderabad My Intrests are Watching movies,
-    reading books, biking and basketball.
+    affixius i currently live in hyderabad
+
+    <p>
+      My Intrests are Watching movies, reading books, biking and basketball.
+    </p>
   </body>
 </html>
