update my likes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     Hi This is Akhil I'm from jeypore i worked as a software engineer at
     affixius i currently live in hyderabad. i have some of my interests. My
-    Intrests are Watching movies,reading books, biking and basketball.
+    Intrests are Watching movies,reading books, biking and basketball. I like to
+    discover food.
   </body>
 </html>
